# IMDA-Agent-Interface

./: GEMINI.MD  README.md  clinical_registry_master.csv  create_fmri_samples.py  create_omics_samples.py  create_survey_bio_samples.py  create_wearables_nlp_samples.py  evaluation.xml  gold_redacted_data.csv  harmonized_bids.csv  harmonized_clinical_records.csv  harmonized_fhir.csv  harmonized_registry_data.rds  imda_server.py  pyproject.toml  raw_clinical_data_source.csv  redacted_clinical_data.csv  silver_merged_data.csv  system_init.py
.gemini/: skills
data/bronze/assessments/: sub-001_mh_survey.csv
data/bronze/biospecimens/: sub-001_blood_draw.csv  sub-001_saliva_swab.csv
data/bronze/ehr/: sample_fhir_bundle.json
data/bronze/ehr_notes/: sub-001_ses-01_clinical_note.csv
data/bronze/genomics/: sub-001_variants.csv
data/bronze/imaging/: sub-001_ses-01_MRS.json  sub-001_ses-01_T1w.json  sub-001_ses-01_task-rest_bold.json  test_structural.nii
data/gold/: gold_multimodal_cohort.csv
data/silver/: harmonized_sub-001_blood_draw.csv  harmonized_sub-001_mass_spec_report.csv  harmonized_sub-001_metabolite_panel.csv  harmonized_sub-001_mh_survey.csv  harmonized_sub-001_saliva_swab.csv  harmonized_sub-001_ses-01_MRS.csv  harmonized_sub-001_ses-01_T1w.csv  harmonized_sub-001_ses-01_actigraphy.csv  harmonized_sub-001_ses-01_clinical_note.csv  harmonized_sub-001_ses-01_task-rest_bold.csv  harmonized_sub-001_ses-01_task-rest_bold.nii.csv  harmonized_sub-001_variants.csv  harmonized_test_structural.csv  test_structural.json
src/python/core/: converter.py  engine.py  (+1 more)
(+26 files in other folders)
