[project]
name = "imda-agent-interface"
version = "0.1.0"
description = "Integrated Medical Data Architecture (IMDA) MCP Server for multi-modal clinical data orchestration."
authors = [
    { name = "Bob Kohler, PhD" }
]
dependencies = [
    "mcp>=1.2.0",
    "fastmcp>=0.4.1",
]
requires-python = ">=3.11"

[project.scripts]
imda-server = "imda_server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
